--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,7 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="bfeather" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bfeather.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="only_skulls" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\only skulls.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="NewRocker_Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NewRocker-Regular.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="elmo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\elmo.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
