--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,4 +130,19 @@
   <data name="elmo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\elmo.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="taivasTausta" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Images\taivasTausta.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="takaisinNappi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Audio\takaisinNappi.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="twentyOne" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Audio\twentyOne.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="vaikeaMusiikki" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Audio\vaikeaMusiikki.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="valikkoNappi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\bin\Debug\Audio\valikkoNappi.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
